--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>プログラミング学習始めよう！</h1>
+    <h1>Rubyを頑張ろう</h1>
   </body>
 </html>
